Format code in Google style. No code change